--- a/rest-services-for-adb-appdevlive/workshops/ocw-tenancy/manifest.json
+++ b/rest-services-for-adb-appdevlive/workshops/ocw-tenancy/manifest.json
@@ -24,21 +24,21 @@
               "filename": "https://oracle-livelabs.github.io/common/labs/sqldevweb-login/sqldevweb-login.md"
           },
           {
-            "title": "Lab 3: Create and Auto-REST enable a table",
+            "title": "Lab 3: Create and auto-REST enable a table",
             "description": "Modern App Dev with Oracle REST Data Services",
-              "filename": "../../create-table/create-table.md"
-          },
-          {
-            "title": "Lab 4: Load data into a table then create business logic for the database",
+            "filename": "../../create-table/create-table.md"
+        },
+        {
+            "title": "Lab 4: Load data and create business logic",
             "description": "Modern App Dev with Oracle REST Data Services",
-              "filename": "../../load-data-and-biz-objs/load-data-and-biz-objs.md"
-          },
-          {
+            "filename": "../../load-data-and-biz-objs/load-data-and-biz-objs.md"
+        },
+        {
             "title": "Lab 5: REST enable tables and add business logic",
             "description": "Modern App Dev with Oracle REST Data Services",
-              "filename": "../../rest-enable-objects/rest-enable-objects.md"
-          },
-          {
+            "filename": "../../rest-enable-objects/rest-enable-objects.md"
+        },
+        {
             "title": "Lab 6: Secure REST-enabled endpoints",
             "description": "Modern App Dev with Oracle REST Data Services",
             "filename": "../../secure-endpoints/secure-endpoints.md"
