--- a/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
+++ b/python-flask-web-application-with-ords-apis/workshop/workshops/tenancy/manifest.json
@@ -13,7 +13,7 @@
             "filename": "../../introduction/workshop-introduction.md"
         },
         {
-            "title": "Get Started with Oracle Cloud",
+            "title": "Get Started",
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
             "filename": "https://oracle-livelabs.github.io/common//labs/cloud-login/cloud-login.md"
         },
