--- a/java-management-lifecycle-management/workshops/freetier/manifest.json
+++ b/java-management-lifecycle-management/workshops/freetier/manifest.json
@@ -2,7 +2,7 @@
     "workshoptitle": "Perform Java Lifecycle Management with Java Management Service",
     "include": {
     },
-    "help": "livelabs-help-oci_us@oracle.com",
+    "help": "autonomous_java-dev_us_grp@oracle.com",
     "tutorials": [
         {
             "title": "Introduction",
