--- a/java-management-oci-services-integration/workshops/freetier/manifest.json
+++ b/java-management-oci-services-integration/workshops/freetier/manifest.json
@@ -2,7 +2,7 @@
   "workshoptitle": "Integrate OCI Services with Java Management Service",
   "include": {
   },
-  "help": "livelabs-help-oci_us@oracle.com",
+  "help": "autonomous_java-dev_us_grp@oracle.com",
   "tutorials": [
     {
       "title": "Introduction",
