--- a/python-and-database-scripting/workshops/ocw-freetier/manifest.json
+++ b/python-and-database-scripting/workshops/ocw-freetier/manifest.json
@@ -15,52 +15,52 @@
         {
             "title": "Lab 1: Create Autonomous Database Instance",
             "description": "Create Autonomous Database Instance",
-            "filename": "../../Lab1-adb/adb.md"
+            "filename": "../../lab1-adb/adb.md"
         },
         {
             "title": "Lab 2: Environment Setup",
             "description": "Install python-oracledb driver and test connection to the Autonomous Database",
-            "filename": "../../Lab2-env-setup/env-setup.md"
+            "filename": "../../lab2-env-setup/env-setup.md"
         },
         {
             "title": "Lab 3: Connection Pools",
             "description": "Use python-oracledb connection pools to connect to the Oracle Database",
-            "filename": "../../Lab3-connection-pool/conn-pool.md"
+            "filename": "../../lab3-connection-pool/conn-pool.md"
         },
         {
             "title": "Lab 4: Fetching Data",
             "description": "Use python-oracledb connection pools to fetch data from the Oracle Database",
-            "filename": "../../Lab4-data-fetching/data-fetch.md"
+            "filename": "../../lab4-data-fetching/data-fetch.md"
         },
         {
             "title": "Lab 5: Binding Data",
             "description": "Use python-oracledb to bind data from the Oracle Database",
-            "filename": "../../Lab5-binding-data/binding-data.md"
+            "filename": "../../lab5-binding-data/binding-data.md"
         },
         {
             "title": "Lab 6: PL/SQL",
             "description": "Use PL/SQL procedures and functions to access data stored in Oracle databases",
-            "filename": "../../Lab6-plsql/plsql.md"
+            "filename": "../../lab6-plsql/plsql.md"
         },
         {
             "title": "Lab 7: Type Handlers",
             "description": "Use type handlers to alter data fetched or sent to the Oracle database using the python-oracledb",
-            "filename": "../../Lab7-type-handlers/type-handlers.md"
+            "filename": "../../lab7-type-handlers/type-handlers.md"
         },
         {
             "title": "Lab 8: LOBS",
             "description": "Use python-oracledb to manipulate LOBs in Oracle databases",
-            "filename": "../../Lab8-lobs/lobs.md"
+            "filename": "../../lab8-lobs/lobs.md"
         },
         {
             "title": "Lab 9: Rowfactory Functions",
             "description": "Use python-oracledb to enable queries to return objects other than tuples",
-            "filename": "../../Lab9-rowfactory-functions/func.md"
+            "filename": "../../lab9-rowfactory-functions/func.md"
         },
         {
             "title": "Lab 10: Subclassing Connections and Cursors",
             "description": "Use subclassing for hooking connection and cursor creation with python-oracledb",
-            "filename": "../../Lab10-con-and-cursors/con-and-cursors.md"
+            "filename": "../../lab10-con-and-cursors/con-and-cursors.md"
         },
         {
             "title": "Lab: Terminate Oracle Autonomous Database",
