fixes to numbering

--- a/build-your-first-skill-with-oda/workshops/freetier/manifest.json
+++ b/build-your-first-skill-with-oda/workshops/freetier/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "Build your first skill with ODA",
+    "workshoptitle": "Build your first skill with the Oracle Digital Assistant",
     "help": "livelabs-help-oci_us@oracle.com",
     "tutorials": [
         {
