--- a/python-and-database-scripting/workshops/ocw-freetier/manifest.json
+++ b/python-and-database-scripting/workshops/ocw-freetier/manifest.json
@@ -15,7 +15,7 @@
         {
             "title": "Lab 1: Create Autonomous Database Instance",
             "description": "Create Autonomous Database Instance",
-            "filename": "../../lab1-adb/adb.md"
+            "filename": "../../lab1
         },
         {
             "title": "Lab 2: Environment Setup",
