--- a/extend-oda-with-oci-ai-services/workshops/livelabs/manifest.json
+++ b/extend-oda-with-oci-ai-services/workshops/livelabs/manifest.json
@@ -33,6 +33,11 @@
             "filename": "../../expose/expose.md"
         },
         {
+            "title": "Lab 6: Add analyze image",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../vision/vision.md"
+        },
+        {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
             "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/oci-library/need-help/need-help-livelabs.md"
