--- a/extend-oda-with-oci-ai-services/workshops/livelabs/manifest.json
+++ b/extend-oda-with-oci-ai-services/workshops/livelabs/manifest.json
@@ -12,28 +12,32 @@
             "filename": "../../introduction/introduction.md"
         },
         {
-            "title": "Lab 1: Design the Pizza Skill",
+            "title": "Lab 1: OCI AI Services",
             "description": "Labs that follow the introduction are numbered, starting with Lab 1",
-            "filename": "../../design/design.md"
-        },
-        {
-            "title": "Lab 2: Set Up the Shopping Centre Digital Assistant",
             "filename": "../../setup/setup.md"
         },
         {
-            "title": "Lab 3: Personalize Your Digital Assistant",
-            "filename": "../../personalize/personalize.md"
+            "title": "Lab 2: Explore the Starter Skill",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../explore/explore.md"
         },
         {
-            "title": "Lab 4: Evaluate Routing Behaviors",
-            "filename": "../../evaluate/evaluate.md"
+            "title": "Lab 3: Extend the Starter Skill",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../extend/extend.md"
         },
         {
-            "title": "Lab 5: Expose the Digital Assistant to Users through a Web Channel",
-            "filename": "../../expose/expose.md"
+            "title": "Lab 4: Add the Detect Sentiment Capability",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../sentiment/sentiment.md"
         },
         {
-            "title": "Lab 6: Add analyze image",
+            "title": "Lab 5: Add the Detect Language Capability",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../language/language.md"
+        },
+        {
+            "title": "Lab 6: Add the Analyze Image Capability",
             "description": "Labs that follow the introduction are numbered, starting with Lab 1",
             "filename": "../../vision/vision.md"
         },
