Made changes to chaincode and yml

--- a/orcl-blockchain-platform/1-labs-obp-env-setup/files/Car_Marketplace.yml
+++ b/orcl-blockchain-platform/1-labs-obp-env-setup/files/Car_Marketplace.yml
@@ -112,6 +112,9 @@ assets:
           - name: recipient    
             type: string
             mandatory: true
+          - name: purchaser    
+            type: string
+            mandatory: false
           - name: invoiceId   
             type: string
             mandatory: false
