--- a/java-amber/workshops/ocw-tenancy/manifest.json
+++ b/java-amber/workshops/ocw-tenancy/manifest.json
@@ -29,6 +29,11 @@
         {
             "title": "Conclusion",
             "filename": "../../conclusion.md"
-        }
+        },
+        {
+            "title": "Need Help?",
+            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+       }
     ]
 }
