fixed OCW/J1 help details

--- a/java-amber/workshops/ocw-tenancy/manifest.json
+++ b/java-amber/workshops/ocw-tenancy/manifest.json
@@ -31,9 +31,8 @@
             "filename": "../../conclusion.md"
         },
         {
-            "title": "Need Help?",
-            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
-       }
+            "title": "JavaOne / CloudWorld - Get Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+        }
     ]
 }
