switched from tenancy to ocw-tenancy + OCW/J1 help section

--- a/java-panama/workshops/ocw-tenancy/manifest.json
+++ b/java-panama/workshops/ocw-tenancy/manifest.json
@@ -30,6 +30,10 @@
             "title": "Conclusion",
             "description": "",
             "filename": "../../conclusion.md"
+        },
+        {
+            "title": "JavaOne / CloudWorld - Get Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
 }
