--- a/java-loom/workshops/ocw-tenancy/manifest.json
+++ b/java-loom/workshops/ocw-tenancy/manifest.json
@@ -21,7 +21,10 @@
         {
             "title": "Conclsuion",
             "filename": "../../conclusion.md"
+        },
+        {
+            "title": "JavaOne / CloudWorld - Get Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
-
     ]
 }
