WMS 11194, 11193, 11192: Fixing typos, formatting, manifests
WMS 11194, 11193, 11192: Fixing typos, formatting, manifests

--- a/java-panama/workshops/ocw-sandbox/manifest.json
+++ b/java-panama/workshops/ocw-sandbox/manifest.json
@@ -3,13 +3,13 @@
     "help": "java_devrel_grp@oracle.com",
     "tutorials": [
         {
-            "title": "Introduction",
-            "filename": "../../introduction.md"
+            "title": "Get Started",
+            "description": "Prerequisites for LiveLabs (Oracle-owned tenancies). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs2.md"
         },
         {
-            "title": "Get Started",
-            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
+            "title": "Introduction",
+            "filename": "../../introduction.md"
         },
         {
             "title": "Lab 1: Your workshop environment",
