--- a/modernize-peoplesoft-with-conversational-ai/workshops/ocw-tenancy/manifest.json
+++ b/modernize-peoplesoft-with-conversational-ai/workshops/ocw-tenancy/manifest.json
@@ -3,6 +3,10 @@
     "help": "livelabs-help-oci_us@oracle.com",
     "tutorials": [
         {
+            "title": "Get Started",
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
+            },
+        {
             "title": "Introduction",
             "filename": "../../introduction/introduction.md"
         },
@@ -21,9 +25,10 @@
             "filename": "../../Lab3/3-test-oda.md"
         },
         {
-            "title": "Need Help?",
-            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/oci-library/need-help/need-help-livelabs.md"
-        }
+            "title": "Oracle CloudWorld 2022 - Get Help",
+            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+ }
+
+
     ]
 }
