--- a/orcl-blockchain-platform/2-labs-obp-appbuilder/files/Car_Title_Registration.yml
+++ b/orcl-blockchain-platform/2-labs-obp-appbuilder/files/Car_Title_Registration.yml
@@ -115,3 +115,4 @@ assets:
 
 customMethods:
     - executeQuery
+    - UpdateTitle(tokenId string, dealerno string,dealername string,dealerloc string,mileage int,newowner string,purchaseprice float64,dateString string)
