Apply LL QA criteria check

--- a/db-operator-k8s/workshops/tenancy/manifest.json
+++ b/db-operator-k8s/workshops/tenancy/manifest.json
@@ -1,6 +1,6 @@
 {
     "workshoptitle": "Oracle Database Kubernetes Operator",
-    "help": "jan.leemans@oracle.com",
+    "help": "livelabs-help-db_us@oracle.com",
     "tutorials": [
         {
             "title": "Introduction",
