--- a/create-a-conversational-interface-database-sql-dialog/workshops/livelabs/manifest.json
+++ b/create-a-conversational-interface-database-sql-dialog/workshops/livelabs/manifest.json
@@ -31,10 +31,10 @@
             "title": "Lab 5 (Optional): Train with custom data",
             "filename": "../../customdata/customdata.md"
         },
-        {
+        { 
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename": "https://raw.githubusercontent.com/oracle/learning-library/master/oci-library/need-help/need-help-livelabs.md"
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
         }
     ]
 }
