--- a/java-loom/workshops/ocw-tenancy/manifest.json
+++ b/java-loom/workshops/ocw-tenancy/manifest.json
@@ -28,8 +28,9 @@
             "filename": "../../conclusion.md"
         },
         {
-            "title": "JavaOne / CloudWorld - Get Help",
-            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+            "title": "Need Help?",
+            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
         }
     ]
 }
