--- a/python-and-database-scripting/workshops/freetier/manifest.json
+++ b/python-and-database-scripting/workshops/freetier/manifest.json
@@ -83,7 +83,17 @@
             "filename": "../../lab-14-soda/soda.md"
         },
         {
-            "title": "Lab 15: Terminate Oracle Autonomous Database",
+            "title": "Lab 15: Query a JSON table from Python",
+            "description": "Work with JSON data in Oracle databases using Python's interface",
+            "filename": "../../lab-15-query-json/query-json.md"
+        },
+        {
+            "title": "Lab 16: Load JSON data into a table using Python",
+            "description": "Load JSON data into an Oracle database table using Python's interface",
+            "filename": "../../lab-16-load-json/load-json.md"
+        },
+        {
+            "title": "Lab: Terminate Oracle Autonomous Database",
             "description": "Terminating an Oracle Autonomous Database permanently",
             "filename":"https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
