added section to create pages up front.  Modified configure welcome page to match pages being added.

--- a/redwood-extensions/workshops/desktop/manifest.json
+++ b/redwood-extensions/workshops/desktop/manifest.json
@@ -18,24 +18,28 @@
       "filename": "../../workspace/workspace.md"
     },
     {
-      "title": "Lab 2: Create your first page",
-      "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+      "title": "Lab 2: Create pages from templates",
+      "description": "Create and configure the application pages",
+      "filename": "../../apppages/addpages.md"
+    },
+    {
+      "title": "Lab 3: Configure the Welcome page",
       "filename": "../../welcome/welcome.md"
     },
     {
-      "title": "Lab 3: Connect to Oracle Fusion Cloud Apps data",
+      "title": "Lab 4: Connect to Oracle Fusion Cloud Apps data",
       "filename": "../../saasservice/saasservice.md"
     },
     {
-      "title": "Lab 4: Add edit and details pages",
+      "title": "Lab 5: Add edit and details pages",
       "filename": "../../editpage/editpage.md"
     },
     {
-      "title": "Lab 5: Add buttons and action chains",
+      "title": "Lab 6: Add buttons and action chains",
       "filename": "../../tableedit/tableedit.md"
     },
     {
-        "title": "Lab 6: Apply Redwood page templates",
+        "title": "Lab 7: Apply Redwood page templates",
 
         "filename": "../../rweditpage/rweditpage.md"
     },
