--- a/redwood-extensions/workshops/desktop/manifest.json
+++ b/redwood-extensions/workshops/desktop/manifest.json
@@ -36,7 +36,7 @@
     },
     {
         "title": "Lab 6: Account Details page",
-        "filename": "../../rweditpage/rweditpage.md"
+        "filename": "../../detailspage/detailspage.md"
     },
     {
       "title": "Lab 7: Edit account page",
