--- a/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-tenancy/manifest.json
@@ -63,14 +63,14 @@
             "filename": "../../lab-10-con-and-cursors/con-and-cursors.md"
         },
         {
-            "title": "Lab: Query a JSON table from Python",
-            "description": "Work with JSON data in Oracle databases using Python's interface",
-            "filename": "../../lab-15-query-json/query-json.md"
+            "title": "Lab 11: Thick Mode",
+            "description": "Use python-oracledb thick-mode for accessing advanced Oracle database functionality",
+            "filename": "../../lab-11-thick-mode/thick.md"
         },
         {
-            "title": "Lab: Load JSON data into a table using Python",
-            "description": "Load JSON data into an Oracle database table using Python's interface",
-            "filename": "../../lab-16-load-json/load-json.md"
+            "title": "Lab 12: Query a JSON table from Python",
+            "description": "Work with JSON data in Oracle databases using Python's interface",
+            "filename": "../../lab-15-query-json/query-json.md"
         },
         {
             "title": "Lab: Terminate Oracle Autonomous Database",
@@ -78,7 +78,7 @@
             "filename":"https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
         {
-            "title": "Oracle CloudWorld 2022 - Get Help",
+            "title": "Oracle CloudWorld 2023 - Get Help",
             "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
         }
     ]
